--- a/PAGINAS/servicios.html
+++ b/PAGINAS/servicios.html
@@ -11,7 +11,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../CSS Servicios/styleservicios.css">
+    <link rel="stylesheet" href="../CSSServicios/styleservicios.css">
 
 </head>
 
@@ -29,13 +29,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="menu">
                     <li class="nav-item-home">
-                    <a class="nav-link active" aria-current="page" href="../PAGINAS/index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../PAGINAS/acercademi.html">Acerca de mi</a>
+                        <a class="nav-link active" aria-current="page" href="./acercademi.html">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="../PAGINAS/proyectos.html">Proyectos</a>
+                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
                     </li>
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="/PAGINAS/servicios.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,7 +47,7 @@
                         <li><a class="dropdown-item" href="/PAGINAS/servicios.html">Urbanismo</a></li>
                     </ul>
                     <li class="nav-item">
-                        <a class="nav-link" href="../PAGINAS/contacto.html">Contactoss</a>
+                        <a class="nav-link" href="./contacto.html">Contactoss</a>
                     </li>
                     </li>
                 
